--- a/tags.html
+++ b/tags.html
@@ -31,7 +31,7 @@ permalink: /tags/
   <h2 id="{{ this_word | cgi_escape }}">{{ this_word }}</h2>
     {% for post in site.tags[this_word] %}{% if post.title != null %}
     <div class="c-tag__item">
-        <span>{% if post.image %}<img class="c-tag__image" src="{{"/images/" | prepend: site.baseurl | append : post.image}}" alt="{{post.title}}">{% else %}{% endif %} <a href="{{ post.url }}">{{ post.title }}</a></span>
+        <span>{% if post.image %}<img class="c-tag__image" src="{{"/images/" | prepend: site.baseurl | append : post.image}}" alt="{{post.title}}">{% else %}{% endif %} <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
         <small><span>| {{ post.date | date_to_string }}</span></small>
     </div>
     {% endif %}{% endfor %}
